[gd_scene load_steps=2 format=3 uid="uid://b1mfvht021f1a"]

[ext_resource type="Script" path="res://create_account.gd" id="1_4g0r1"]

[node name="CreateAccount" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4g0r1")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -172.5
offset_right = 118.0
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2

[node name="UsernameLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Usu√°rio"

[node name="UsernameTextEdit" type="TextEdit" parent="Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4

[node name="EmailLabel" type="Label" parent="Container"]
layout_mode = 2
text = "E-mail"

[node name="EmailTextEdit" type="TextEdit" parent="Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4

[node name="PasswordLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Senha"

[node name="PasswordTextEdit" type="TextEdit" parent="Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4

[node name="HSeparator2" type="HSeparator" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="CreateAccountButton" type="Button" parent="Container"]
layout_mode = 2
text = "Criar conta"

[connection signal="pressed" from="Container/CreateAccountButton" to="." method="_on_create_account_button_pressed"]
